[gd_scene load_steps=7 format=3 uid="uid://bje75nfqnj6ts"]

[ext_resource type="Script" uid="uid://c25so3cghb30f" path="res://Scenes/zone_select_dialog.gd" id="1_f731i"]
[ext_resource type="Script" uid="uid://ckhevounoe7f4" path="res://Scenes/fadeable_panel_container.gd" id="2_jed00"]
[ext_resource type="Texture2D" uid="uid://bcjkbkwh1wqjt" path="res://Textures/UI/shop_frame_v3.png" id="3_rt3fm"]
[ext_resource type="Texture2D" uid="uid://c0etl38vn3bw6" path="res://Textures/UI/Buttons/button_cross.png" id="4_aesx5"]
[ext_resource type="PackedScene" uid="uid://cdtqm8y17kfpc" path="res://Dialogs/ZoneSelection/zone_naming_element.tscn" id="5_jed00"]
[ext_resource type="PackedScene" uid="uid://bkusbdp74xdpb" path="res://Dialogs/ZoneSelection/zone_selection_element.tscn" id="6_jed00"]

[node name="ZoneSelectDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f731i")
metadata/_custom_type_script = "uid://crap0ddpji4x7"

[node name="FadeablePanelContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -510.5
offset_top = -512.0
offset_right = 510.5
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_jed00")
metadata/_custom_type_script = "uid://ckhevounoe7f4"

[node name="TextureRect" type="TextureRect" parent="FadeablePanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_rt3fm")

[node name="MarginContainer" type="MarginContainer" parent="FadeablePanelContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 35
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 40

[node name="ColorRect" type="ColorRect" parent="FadeablePanelContainer/TextureRect/MarginContainer"]
visible = false
layout_mode = 2
color = Color(1, 0.29, 0.29, 0.47451)

[node name="VBoxContainer" type="VBoxContainer" parent="FadeablePanelContainer/TextureRect/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"ResultLabel"
text = "Zone Select"

[node name="CloseButton" type="TextureButton" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
z_index = 10
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
texture_normal = ExtResource("4_aesx5")

[node name="MarginContainer" type="MarginContainer" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 55
theme_override_constants/margin_top = -15
theme_override_constants/margin_right = 85
theme_override_constants/margin_bottom = 83

[node name="ColorRect" type="ColorRect" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer"]
visible = false
layout_mode = 2
color = Color(1, 0.29, 0.29, 0.47451)

[node name="ScrollContainer" type="ScrollContainer" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Elements" type="VBoxContainer" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ZoneNamingElement" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements" instance=ExtResource("5_jed00")]
layout_mode = 2

[node name="TunnelSelectionElement" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements" instance=ExtResource("6_jed00")]
layout_mode = 2
title = "Tunnel"
filename = "classic-0010_Tunnel.nzne"

[node name="FunnelSelectionElement2" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements" instance=ExtResource("6_jed00")]
layout_mode = 2
title = "Funnel"
filename = "classic-0020_Funnel.nzne"

[node name="FunnelSelectionElement3" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements" instance=ExtResource("6_jed00")]
layout_mode = 2
title = "Funnel"
filename = "classic-0020_Funnel.nzne"

[node name="FunnelSelectionElement4" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements" instance=ExtResource("6_jed00")]
layout_mode = 2
title = "Funnel"
filename = "classic-0020_Funnel.nzne"

[node name="FunnelSelectionElement5" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements" instance=ExtResource("6_jed00")]
layout_mode = 2
title = "Funnel"
filename = "classic-0020_Funnel.nzne"

[node name="FunnelSelectionElement6" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements" instance=ExtResource("6_jed00")]
layout_mode = 2
title = "Funnel"
filename = "classic-0020_Funnel.nzne"

[node name="FunnelSelectionElement7" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements" instance=ExtResource("6_jed00")]
layout_mode = 2
title = "Funnel"
filename = "classic-0020_Funnel.nzne"

[node name="FunnelSelectionElement8" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements" instance=ExtResource("6_jed00")]
layout_mode = 2
title = "Funnel"
filename = "classic-0020_Funnel.nzne"

[node name="FunnelSelectionElement9" parent="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements" instance=ExtResource("6_jed00")]
layout_mode = 2
title = "Funnel"
filename = "classic-0020_Funnel.nzne"

[connection signal="on_faded_in" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_faded_in"]
[connection signal="on_faded_out" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_faded_out"]
[connection signal="on_fading_in" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_fading_in"]
[connection signal="on_fading_out" from="FadeablePanelContainer" to="." method="_on_fadeable_panel_container_on_fading_out"]
[connection signal="pressed" from="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="selected" from="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements/TunnelSelectionElement" to="." method="_on_tunnel_selection_element_selected"]
[connection signal="selected" from="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements/FunnelSelectionElement2" to="." method="_on_tunnel_selection_element_selected"]
[connection signal="selected" from="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements/FunnelSelectionElement3" to="." method="_on_tunnel_selection_element_selected"]
[connection signal="selected" from="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements/FunnelSelectionElement4" to="." method="_on_tunnel_selection_element_selected"]
[connection signal="selected" from="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements/FunnelSelectionElement5" to="." method="_on_tunnel_selection_element_selected"]
[connection signal="selected" from="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements/FunnelSelectionElement6" to="." method="_on_tunnel_selection_element_selected"]
[connection signal="selected" from="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements/FunnelSelectionElement7" to="." method="_on_tunnel_selection_element_selected"]
[connection signal="selected" from="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements/FunnelSelectionElement8" to="." method="_on_tunnel_selection_element_selected"]
[connection signal="selected" from="FadeablePanelContainer/TextureRect/MarginContainer/VBoxContainer/MarginContainer/ScrollContainer/Elements/FunnelSelectionElement9" to="." method="_on_tunnel_selection_element_selected"]
